# claudium

./: .gitignore  README.md  aquarium.py  entities.py  install.py  main.py  pyproject.toml  server.py
docs/plans/: 2026-02-28-claudium-evolution-design.md  2026-02-28-phase1-package-restructure.md  2026-02-28-phase3-4-utility-interaction-design.md
src/claudium/: __init__.py  __main__.py  aquarium.py  cli.py  entities.py  hook_sender.py  server.py
tests/: test_entities.py  test_hook_sender.py  test_install.py  test_server.py
