[project]
name = "claudium"
version = "0.1.0"
description = "Claude Code Aquarium Visualizer"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.scripts]
claudium = "claudium.cli:main"
claudium-hook = "claudium.hook_sender:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
